# VoiceRep

./: .gitignore  README.md  clear_bark_cache.py  docker-compose.rvc.yml  docker-compose.yml  download.py  start_app.py  test_progress_tracking.py  test_server_fixes.py  test_synthesis_fixes.py  test_timeout_fix.py  test_voice_overlap_fix.py
backend/: .env.example  Dockerfile  Dockerfile.rvc  alembic.ini  final_test.py  manage.py  pyproject.toml  requirements-basic.txt  requirements-minimal.txt  requirements.txt  simple_test.py  test_advanced_audio_post_processor.py  test_advanced_preprocessing.py  test_advanced_voice_cloning.py  test_apis.py  test_backend.py  test_cuda_setup.py  test_ensemble_synthesis.py  test_file_service.py  test_intelligent_voice_model_trainer.py  test_multidimensional_voice_analyzer.py  test_performance_optimization.py  test_preprocessing_integration.py  test_real_time_quality_monitoring.py  test_robust_error_recovery.py  test_session.py  test_simple_voice_model.py  test_voice_model_core.py  test_voice_model_integration.py  test_voice_model_integration_real.py  test_workflow.py
backend/alembic/: env.py
backend/alembic/versions/: 61303a26c0fc_add_voice_analysis_tables.py  97d70356e1aa_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/core/: api_documentation.py  celery_app.py  config.py  database.py  endpoint_testing.py  error_handling.py  logging_config.py  redis_client.py  startup_utils.py
backend/app/middleware/: performance_middleware.py  (+1 more)
backend/deployment/: docker-compose.production.yml  nginx.conf  prometheus.yml
(+91 files in other folders)
